--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/jsdom": "^2.0.30",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.2.1",
     "jquery-ts": "^2.1.1",
